fix layout shift border

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -4,7 +4,8 @@ input, textarea, select {
 
     width: 100%;
     border-radius: .5rem;
-    border: 1px solid var(--stroke-default);
+    border: 2px solid transparent;
+    outline: 1px solid var(--stroke-default);
 
     padding: .75rem 1rem;
 
@@ -21,7 +22,7 @@ label {
 
 input:focus, select:focus, textarea:focus, input[type="date"]:focus-within {
     outline: .25rem solid var(--surface-secondary);
-    border: .125rem solid var(--stroke-hightlight);
+    border-color: var(--stroke-hightlight);
 
     /* Para navegadores Safari */
     outline-offset: .1px;
